Colaboratory를 통해 생성됨

--- a/김경은.ipynb
+++ b/김경은.ipynb
@@ -39,22 +39,27 @@
         "id": "92YNQ4ikoN7o"
       },
       "source": [
-        "- <스스로> 마크다운 실습"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HWcY1UQLVkhB"
-      },
-      "source": [
         "\r\n",
-        "# 아하아하아하 \r\n",
-        "## 아하아하\r\n",
-        "### 아하\r\n"
-      ],
-      "execution_count": 115,
-      "outputs": []
+        "\r\n",
+        "```\r\n",
+        "# 코드로 형식 지정됨\r\n",
+        "```\r\n",
+        "\r\n",
+        "- <스스로> 마크다운 실습\r\n",
+        "\r\n",
+        "# 김경은\r\n",
+        "\r\n",
+        "## 김경은\r\n",
+        "\r\n",
+        "### 김경은\r\n",
+        "\r\n",
+        " _김경은_  \r\n",
+        "__김경은__\r\n",
+        "  \r\n",
+        "  [깃허브](https://github.com/)\r\n",
+        "\r\n",
+        "\r\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -68,7 +73,7 @@
       "source": [
         "!pwd"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +123,7 @@
       "source": [
         "dir([1,2,3])"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +196,7 @@
       "source": [
         "[1, 2, 3].__iter__()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +422,7 @@
         "for i in number_generator():\r\n",
         "    print(i)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +458,7 @@
         "next(_)\r\n",
         "next(_)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,7 +502,7 @@
         "for _ in g():\r\n",
         "  print( _ * 2)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +542,7 @@
         "g = number_generator()\r\n",
         "g"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +570,7 @@
       "source": [
         "g.__next__()"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +598,7 @@
       "source": [
         "g.__next__()"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -621,7 +626,7 @@
       "source": [
         "g.__next__()"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,7 +655,7 @@
       "source": [
         "g.__next__()"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -694,7 +699,7 @@
         "          '5입니다' if x==5 else\\\r\n",
         "          '1도 5도 아닙니다'"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -710,7 +715,7 @@
       "source": [
         "confirm(1)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,7 +747,7 @@
       "source": [
         "confirm(3)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -774,7 +779,7 @@
       "source": [
         "confirm(5)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +825,7 @@
       "source": [
         "A = [1,2,3,4,5]"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +850,7 @@
         "A.append(6)\r\n",
         "A"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -874,7 +879,7 @@
         "del(A[0])\r\n",
         "A"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -912,7 +917,7 @@
         "A = [1,2,3,4,5]\r\n",
         "A[:2]"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -945,7 +950,7 @@
       "source": [
         "A = list(range(10)) # [0,1,2,3,4,5,6,7,8,9] 할당"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -973,7 +978,7 @@
         "# B = [x for x in A]\r\n",
         "B"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1002,7 +1007,7 @@
         "C =[x for x in A if x > 5 ] # [6,7,8,9] 할당 = 5 보다 큰 값 할당 필터링 역할\r\n",
         "C"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,7 +1048,7 @@
         "D = [x for x in A if x > 5 and x % 2 == 0 ]\r\n",
         "D"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,7 +1087,7 @@
         "  else:\r\n",
         "    return F(n-1) + F(n-2) # 재귀(recursive)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1098,7 +1103,7 @@
         "R = [F(n) for n in range(1, 10)]\r\n",
         "print(R) #F(1)에서 F(9)까지 구하기"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1132,7 +1137,7 @@
         "def lamb(x):\r\n",
         "  return x*2"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1149,7 +1154,7 @@
         "R = [F(n) for n in range(1,10)]\r\n",
         "print(R) #[1, 1, 2, 3, 5, 8, 13, 21, 34]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1180,7 +1185,7 @@
         "for f in L:\r\n",
         "  print(f(2))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,7 +1212,7 @@
         "F = lambda n : [f(n) for f in L]\r\n",
         "F(2)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1240,7 +1245,7 @@
       "source": [
         "A=lambda x: x*2"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1251,7 +1256,7 @@
       "source": [
         "B=lambda x: x*3 "
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1262,7 +1267,7 @@
       "source": [
         "C=lambda x: x*4"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1273,7 +1278,7 @@
       "source": [
         "D=lambda x: x*5"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1290,7 +1295,7 @@
         "for f in L:\r\n",
         "  print(f(2))"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,7 +1322,7 @@
         "F=lambda n :[f(n)for f in L]\r\n",
         "F(2)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1360,7 +1365,7 @@
         "F = lambda * x : ''.join(x) # 문자열을 붙여주는 함수\r\n",
         "F('파이썬', '코딩', '쉽네') # '파이썬코딩쉽네'"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1396,7 +1401,7 @@
         "D = dict(D)\r\n",
         "print(D['파이썬'])\r\n"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1428,7 +1433,7 @@
       "source": [
         "F = lambda **x : sum(x['data']) if 'type' in x and x['type'] == 'sum' else 0"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1443,7 +1448,7 @@
       "source": [
         "F(type='sum', data=[1,2,3,4])"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1471,7 +1476,7 @@
       "source": [
         "F(data=[1,2,3,4,5])"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1499,7 +1504,7 @@
       "source": [
         "F(type='mul', data=[1,2,3,4,5])"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1537,7 +1542,7 @@
       "source": [
         "pwd"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1579,7 +1584,7 @@
         "with open('student.txt', 'r', encoding='euc-kr') as fr:\r\n",
         "  print(fr.readline())"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1616,7 +1621,7 @@
         "F = lambda x : x.split(';')[1:]\r\n",
         "F('태서연;54;72;60;78')"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1645,7 +1650,7 @@
         "F = lambda x : x.split(';')\r\n",
         "F('태서연;54;72;60;78')"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1683,7 +1688,7 @@
         "F = lambda x : [int(i) for i in x.split(';')[1:]]\r\n",
         "F('태서연;54;72;60;78')"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1721,7 +1726,7 @@
         "F = lambda x : sum([int(i) for i in x.split(';')[1:]])\r\n",
         "F('태서연;54;72;60;78')"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1760,7 +1765,7 @@
         "name, total = F('태서연;54;72;60;78')\r\n",
         "print(name, total)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1793,7 +1798,7 @@
         "F = lambda L : [int(x) for x in L[1:]]\r\n",
         "F('태서연;54;72;60;78'.split(';'))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1834,7 +1839,7 @@
         "\r\n",
         "print(name, total)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1870,7 +1875,7 @@
         "name, value = F('태서연;54;72;60;78'.split(';'), \"sum\")\r\n",
         "print(name, value)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1894,7 +1899,7 @@
         "name, value = F('태서연;54;72;60;78'.split(';'), \"avg\")\r\n",
         "print(name, value)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1919,7 +1924,7 @@
         "name, value = F('태서연;54;72;60;78'.split(';'), \"mul\")\r\n",
         "print(name, value)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1963,7 +1968,7 @@
         "    result = f\"{name};{total_sum};{total_avg}\\n\"\r\n",
         "    fw.write(result)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2003,7 +2008,7 @@
         "  print(fr.readline())\r\n",
         "  print(fr.readline())"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2057,7 +2062,7 @@
         "print(json_data)\r\n",
         "\r\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2196,7 +2201,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 244
         },
-        "outputId": "8de4a3dd-0a90-4a42-8aa7-2bfe9f0ae4de"
+        "outputId": "70db9360-fb19-481e-d264-ef5c616c7928"
       },
       "source": [
         "import json\r\n",
@@ -2213,7 +2218,7 @@
         "\r\n",
         "print(pickle_data['태서연'])"
       ],
-      "execution_count": 76,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "error",
@@ -2222,7 +2227,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-76-c55219b28f0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'student_json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'UTF-8-sig'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0mjson_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-116-c55219b28f0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'student_json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'UTF-8-sig'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0mjson_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'student_json'"
           ]
         }
@@ -2238,6 +2243,41 @@
         "- seoul_people_report (CSV) 파일을 기반으로 구명을 key 값을 가지는 딕셔너리로 변경\r\n",
         "\r\n",
         "- 구별 '외국인 비율', '6 세이상고령자 비율' 을 계산 후 각각 key( 외국인비율 , 고령자비율에 저장"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "id": "01EjftWgZcrv",
+        "outputId": "33500f73-7fc6-496c-c276-d5a093b061e5"
+      },
+      "source": [
+        "with open('seoul_people_report','r',encoding='UTF-8_sig') as fr:\r\n",
+        "  raw_list=[_.strip()for _ in fr.readlines()]\r\n",
+        "  raw_split =[_.split(',')for _ in raw_list]\r\n",
+        "dict={}\r\n",
+        "for data in raw_split[1:]:\r\n",
+        "  name=data[0]\r\n",
+        "  _1,_2,_3,_4,_5 = (int (_)for _ in arr[1:])\r\n",
+        "  dict[name]={'전체':_1, '남자':_2,'여자':_3,'외국인':_4,'고령자':_5}\r\n",
+        "for k,v in dict.items():\r\n",
+        "\r\n",
+        "print(raw_list)"
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-122-77e675ca961f>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    print(raw_list)\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
       ]
     }
   ]
